--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -38,3 +38,12 @@ source ~/.zsh_plugins.zsh
 # Docker completion
 zstyle ':completion:*:*:docker:*' option-stacking yes
 zstyle ':completion:*:*:docker-*:*' option-stacking yes
+
+{{ if eq .chezmoi.os "darwin" -}}
+alias brew='env PATH="${PATH//$(pyenv root)\/shims:/}" brew'
+{{ end -}}
+
+export PYENV_ROOT="$HOME/.pyenv"
+[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"
+eval "$(pyenv init -)"
+
