--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -47,3 +47,8 @@ export PYENV_ROOT="$HOME/.pyenv"
 [[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
 
+# Start the SSH agent if it's not running
+if ! pgrep -u "$USER" ssh-agent > /dev/null; then
+  eval $(ssh-agent -s)
+fi
+
