--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -28,3 +28,7 @@ export PATH="$VOLTA_HOME/bin:$PATH"
 # composer
 
 export PATH="$HOME/.config/composer/vendor/bin:$PATH"
+
+# wakatime
+
+eval "$(terminal-wakatime init)"
