--- a/.chezmoiscripts/run_once_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_install-packages.sh.tmpl
@@ -10,13 +10,10 @@ brew bundle --file={{ .chezmoi.sourceDir }}/dot_brewfile
 
 {{ end -}}
 
-goenv install 1.24.2 -s
-goenv global 1.24.2
+goenv install 1.25 -s
+goenv global 1.25
 goenv rehash
 
-volta install node@22
+volta install node@latest
 volta install yarn@1
 volta install npm-upgrade
-volta install prettier
-
-go install github.com/hackclub/terminal-wakatime/cmd/terminal-wakatime@latest
