--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,12 +1,3 @@
-(( ${+commands[direnv]} )) && emulate zsh -c "$(direnv export zsh)"
-# Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
-# Initialization code that may require console input (password prompts, [y/n]
-# confirmations, etc.) must go above this block; everything else may go below.
-if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-fi
-(( ${+commands[direnv]} )) && emulate zsh -c "$(direnv hook zsh)"
-
 # Antidote plugin manager
 
 [[ -f ~/.zsh_plugins.txt ]] || touch ~/.zsh_plugins.txt
@@ -29,26 +20,23 @@ fi
 # Load plugins
 source ~/.zsh_plugins.zsh
 
-# Load Powerlevel10k theme.
-[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
-
 # Docker completion
 zstyle ':completion:*:*:docker:*' option-stacking yes
 zstyle ':completion:*:*:docker-*:*' option-stacking yes
 
-# Start the SSH agent if it's not running
-if ! pgrep -u "$USER" ssh-agent > /dev/null; then
-  eval $(ssh-agent -s)
-fi
-
-# config not in .profile
+# config in .profile
 [ -f ~/.profile ] && source ~/.profile
-eval "$(uv generate-shell-completion zsh)"
-FPATH=~/.rbenv/completions:"$FPATH"
-eval "$(rbenv init - zsh)"
 
 # completions
 
 autoload -U compinit
-compinit
+zstyle ':completion:*' rehash true
+compinit -C
 
+# theme
+
+zstyle :prompt:pure:git:stash show yes
+zstyle :prompt:pure:git:fetch only_upstream yes
+
+autoload -U promptinit; promptinit
+prompt pure
