feat: new beginnings

--- a/.chezmoiscripts/run_once_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_install-packages.sh.tmpl
@@ -2,7 +2,7 @@
 
 {{ if eq .chezmoi.os "darwin" -}}
 
-brew bundle --file={{ .chezmoi.sourceDir }}/dot_brewfile
+brew bundle --cleanup --file={{ .chezmoi.sourceDir }}/dot_brewfile
 
 {{ else if eq .chezmoi.os "linux" -}}
 
