feat: new zsh plugins

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -23,6 +23,11 @@ fi
 # Load plugins
 source ~/.zsh_plugins.zsh
 
+# zsh-history-substring-search configuration
+bindkey '^[[A' history-substring-search-up # or '\eOA'
+bindkey '^[[B' history-substring-search-down # or '\eOB'
+HISTORY_SUBSTRING_SEARCH_ENSURE_UNIQUE=1
+
 # Docker completion
 zstyle ':completion:*:*:docker:*' option-stacking yes
 zstyle ':completion:*:*:docker-*:*' option-stacking yes
@@ -35,6 +40,9 @@ zstyle ':completion:*:*:docker-*:*' option-stacking yes
 autoload -U compinit
 zstyle ':completion:*' rehash true
 compinit -C
+
+# zsh-z
+zstyle ':completion:*' menu select
 
 # theme
 
